# maya

./: .gitignore  .mcp.json  GEMINI.MD  PRD.md  app.py  frontend_prd.md  history.md  pyproject.toml  pytest.ini
.gemini/: settings.json
agents/maya-agent/: pyproject.toml
agents/maya-agent/maya_agent/: __init__.py  agent.py  config.py  prompts.py  schemas.py  utils.py
agents/maya-agent/maya_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/maya-agent/maya_agent/sub_agents/: __init__.py
agents/maya-agent/maya_agent/sub_agents/asset_generator/: __init__.py  agent.py  prompts.py  tools.py  tools_vertex.py
agents/maya-agent/maya_agent/sub_agents/generator/: __init__.py  agent.py  prompts.py  streaming.py  tools_asset.py
agents/maya-agent/maya_agent/sub_agents/publisher/: __init__.py  agent.py  prompts.py  schemas.py  tools_adk.py
agents/maya-agent/tests/: test_agent.py
api/: __init__.py  main.py  maya_integration.py  mock_endpoint.py
docs/: AGENT_SESSION_STRUCTURE.md  frontend_prd.md  game_personalizer_agent_prd.txt  game_publisher_agent_prd.txt  maya-architecture.md
docs/reference/: firebase_mcp_doc.md
frontend/: mock-backend-test.js  test-events.html
generated_assets/: medieval_sword.glb
generated_assets/session_20250826_195159/: generation_summary.txt
generated_games/: game_1158.html  game_2587.html  game_4420.html  game_8202.html
maya/: __init__.py
maya_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
vertex-ai-deployment/: Dockerfile  app.py  deploy_endpoint_only.py  deploy_flux.py  flux_model.txt  predictor.py  requirements.txt
(+133 files in other folders)
